# machine_learning

./: regressionLogistic.ipynb
multinomialNB/: app.py  avaliacoesProduto.csv  classifica_mnb.pkl  data_prep.py  model_mnb.pkl  multinomialNB.ipynb  vectorizer_transform.pkl
phrase_analyser/API/: api_app.py
phrase_analyser/app/: handler.py
phrase_analyser/app/inventory/: model_mnb.pkl  vectorizer.pkl
projeto_bot/: pyproject.toml
projeto_bot/bot_jarvis/: app.py
projeto_bot/tests/: test_bot_jarvis.py
