[tool.poetry]
name = "bot_jarvis"
version = "0.1.0"
description = "Bot Telegram"
authors = ["Ruan Almeida <ruan.almeida99@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blue = "^0.9.1"
datetime = "^4.5"
zabbix_api = "^0.5.4"
pythonw = "^3.0.3"
pyproject-toml = "^0.0.10"
requests = "^2.28.1"
mysql-connector = "^2.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
